--- a/OK Page.html
+++ b/OK Page.html
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head>
 <body style="background-color: cadetblue;">
-    <center><h1 style="background-color: burlywood;">SeatGrab <img src = "C:\Users\Sree\Desktop\1OK Coders Tasks\Projects\movie.png" width = 30 height = 55></h1></center>
+    <center><h1 style="background-color: burlywood;">SeatGrab <img src = "./movie.png" width = 30 height = 55></h1></center>
     <h2>Your Tickets Booked Successfully</h2>
 </body>
 </html>
