--- a/Ticketprices.html
+++ b/Ticketprices.html
@@ -10,6 +10,6 @@
     <h2>Ticket Prices</h2>
         <button><a href = "./OK Page.html" target = "_blank">Recliner : 350</a></button>
         <button><a href = "./OK Page.html" target = "_blank">Platinum : 250</a></button>
-        <button><a href = "'/OK Page.html" target = "_blank">Gold : 150</a></button>
+        <button><a href = "./OK Page.html" target = "_blank">Gold : 150</a></button>
 </body>
 </html>
